# countdown

./: .gitignore  Gemfile  Guardfile  README.txt  countdown.cabal
src/: Combinator.hs  Countdown.hs  Echo.hs  Main.hs  Operator.hs
test/: CombinatorSpec.hs  CountdownSpec.hs  EchoSpec.hs  OperatorSpec.hs
